--- a/popup.css
+++ b/popup.css
@@ -82,7 +82,7 @@ label {
 }
 
 #hydrationMessage{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat';
     font-size: 20px;
 }
 
